# SimSub

./: .gitignore  .gitmodules  CMakeLists.txt
apps/: main.cpp
build-msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  SimuSub.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  subrtx.vcxproj  subrtx.vcxproj.filters  subrtx_cli.vcxproj  subrtx_cli.vcxproj.filters
build-msvc-x64/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  subrtx.lib  subrtx_cli.ilk
build-msvc-x64/.cmake/api/v1/reply/: cache-v2-e6cbe56487fd6f3ae864.json  cmakeFiles-v1-f1d5bf9e4f2748d34955.json  codemodel-v2-8dff2b14e2b5ad55e9bc.json  directory-third_party.whisper.cpp-Debug-ed9f75f3fc5cb04e9858.json  directory-third_party.whisper.cpp.ggml-Debug-6b91df65e78a510611d8.json  directory-third_party.whisper.cpp.ggml.src-Debug-99145f98d30a2e2e3f43.json  index-2025-09-22T20-29-19-0254.json  target-ggml-Debug-c6e22ea3c7e306908a16.json  target-ggml-base-Debug-cfedee9d722f7f11ef12.json  target-ggml-cpu-Debug-4c2777eb6ed662c6cad5.json  target-subrtx-Debug-228c35820b6c95cb30ee.json  target-subrtx_cli-Debug-90e226ba73dd8806b9f8.json  target-whisper-Debug-e90a9d1d169e824d9590.json  toolchains-v1-4cfef0517978991b8682.json
build-msvc/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build-msvc/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
build-ninja/: CMakeCache.txt
include/: asr.h  audio.h  core.h  subrtx.cpp  subrtx.h
src/: asr.cpp  asr.h  audio.cpp  core.cpp  overlay.cpp  overlay.h  vad.cpp  vad.h
